--- a/Apr_dev/selectors.css
+++ b/Apr_dev/selectors.css
@@ -83,3 +83,14 @@ h5::first-letter{
 p::first-line{
     color: greenyellow;
 }
+
+input[type=text]{
+    outline: rgb(17, 0, 255);
+    border-color:  rgb(69, 241, 106);
+    background-color: rgb(239, 146, 25);
+}
+input[type=button]{
+    outline: rgb(17, 0, 255);
+    border-color:  rgb(245, 79, 18);
+    background-color: rgb(34, 230, 240);
+}
