--- a/Angular_Dev/src/app/app.component.html
+++ b/Angular_Dev/src/app/app.component.html
@@ -1,3 +1,5 @@
+
+
 <marquee class="heading-main" scrollAmount="17">My First Application</marquee>
 <div class="div-container">
   <h1 class="h1-container">Mumbai</h1>
@@ -8,3 +10,5 @@
 <div>
   <p>poonam patil</p>
 </div>
+
+<app-login></app-login>
