--- a/Angular_Dev/src/app/app.component.html
+++ b/Angular_Dev/src/app/app.component.html
@@ -1,14 +1,15 @@
 
 
 <marquee class="heading-main" scrollAmount="17">My First Application</marquee>
-<div class="div-container">
+<!-- <div class="div-container">
   <h1 class="h1-container">Mumbai</h1>
   <p class="fname">{{firstName}} </p> <br>
   {{num}}
-</div>
+</div> -->
 
-<div>
+<!-- <div>
   <p>poonam patil</p>
-</div>
-
+</div> -->
+<br><br>
 <app-login></app-login>
+
