--- a/Angular_Dev/src/app/login/login.component.html
+++ b/Angular_Dev/src/app/login/login.component.html
@@ -1,1 +1,17 @@
-<p>login works!</p>
+
+<div class="login-form-container">
+    <h2>{{formTitle}}</h2>
+    <p>{{test}}</p>
+    <div>
+        <form>
+            <label>Email</label><br>
+            <input type="text"><br>
+            <label>Password</label><br>
+            <input type="text"><br><br><br>
+            <button >Submit</button>
+        </form>
+    </div><br>
+    <button (click) = "submit()">click</button>
+</div>
+
+
