--- a/Angular_Dev/src/app/app.component.html
+++ b/Angular_Dev/src/app/app.component.html
@@ -12,6 +12,6 @@
 </div> -->
 <br><br>
 <app-login></app-login>
-<app-sign-up></app-sign-up>
-<app-landing></app-landing>
+<!-- <app-sign-up></app-sign-up>
+<app-landing></app-landing> -->
 
