--- a/Angular_Dev/src/app/login/login.component.html
+++ b/Angular_Dev/src/app/login/login.component.html
@@ -1,7 +1,9 @@
 
+
+
 <div class="login-form-container">
-    <h2>{{formTitle}}</h2>
-    <p>{{test}}</p>
+    <h2>{{formTitleTest()}}</h2>
+  
     <div>
         <form>
             <label>Email</label><br>
@@ -12,6 +14,23 @@
         </form>
     </div><br>
     <button (click) = "submit()">click</button>
-</div>
+</div><br>    <br>
+<p>{{amount}}</p>
+<p>{{test}}</p>
 
+<h2>Welcome {{studentName}}</h2>
+<h2>{{studentMarks}}</h2>
+<h2>{{isStudentActive}}</h2>
+{{studentName}}
+
+<!--  can we use typeof operator in string interpollation ::we can no use -->
+<!-- <h2>{{typeof(studentName)}}</h2> -->
+<h2>{{interpolationTest()}}</h2>
+<h2>{{10*33}}</h2>
+<!-- <h2>{{let a = 30}}</h2> assigment operator is not possible-->
+<!-- {{amount = 900}} assigning value with interpollation not possible-->
+
+ {{amount == 50000}}  <!--we can use equality operator with interpolation -->
+ 
+<br><br><br>
 
