--- a/ANGULAR_PROJECT/src/app/app.component.html
+++ b/ANGULAR_PROJECT/src/app/app.component.html
@@ -1,6 +1,6 @@
 <br><br>
 <!-- <h2>{{firstName}}</h2> -->
-<h2 class="user-name">WelCome {{studentName}}</h2><br>
+<!-- <h2 class="user-name">WelCome {{studentName}}</h2><br>
 <div class = "container">
     <form>
         <h2>{{formTitle}}</h2>
@@ -12,7 +12,7 @@
         <br><br>
         <button class="sbmt-btn">Submit</button>
     </form>
-</div>
+</div> -->
 
 <!-- //data binding in angular:
 // two categouries: 1.one way data Binding , 2.two way data binding
@@ -21,24 +21,47 @@
 //2.property Binding:[]
 //3.Event binding:()
 //2.two way data binding:[()] -->
-
+<!-- 
 <p>You have received amount --- {{amount}}</p>
-<p>{{isFavCity}}</p>
+<p>{{isFavCity}}</p> -->
 <!--Test cases 1: can we use typeof operator into interpollation : no we can not use-->
 <!-- <p>{{typeof(isFavCity)}}</p> -->
-
+<!-- {{isFavCity}} -->
 <!---Test cases 2: can we use arithmatic operators into interpollation :yes we can use -->
-<p> {{50+10}}</p>
+<!-- <p> {{50+10}}</p> -->
 
 <!-- -Test cases 3: can we use methods/functions into intrpl : yes we can use  -->
-<p>{{testingInterpolation(30,60)}}</p>
+<!-- <p>{{testingInterpolation(30,60)}}</p> -->
 
 <!-- test case no 4: can we use assignment operator with interpolation :no we can not use
 = - assigment operator (used to assign a value)
 == - Equality operator (it will check only value equality)
 === - Equality operator(it will check value as well as datatype)-->
 <!-- {{isFavCity = true}} -->
-<p>{{isFavCity == false}}</p>
-<p>{{isFavCity === false}}</p>
+<!-- <p>{{isFavCity == false}}</p>
+<p>{{isFavCity === false}}</p> -->
 <!-- <p>{{amount === 5600}}</p> if data type is different then it will through an error -->
+{{myName}}
+<p>{{isFavCity}}</p> 
+<br>
+<input type="text" [value]="myName"><br><br>
+<input type="radio" [checked]="gender"><br>
+<input type="text" value = "{{myName}}"><br><br>
+
+<!-- <input type="text" disabled = "{{isDisabled}}"><br><br> we can not use interpollation majorly with disabled atteribute-->
+<input type="text" [disabled] = "isDisabled"><br>
+
+<!-- 3.EventBinding () (click),(focus) (blur) etc-->
+<br>
+<button (click)="testingEventBinding()">Click...</button>
+{{eventBindingData}}
+<br><br>
+
+<!-- Two way Data binding -->
+<input type="text" [(ngModel)] = "twoWayBindingTest"><br><br>
+
+{{twoWayBindingTest}}
+
+<button (click)="test()">click to print </button>
+
 <br><br><br><br><br><br>
