--- a/ANGULAR_PROJECT/src/app/app.component.html
+++ b/ANGULAR_PROJECT/src/app/app.component.html
@@ -1,4 +1,6 @@
 <br><br>
+
+
 <!-- <h2>{{firstName}}</h2> -->
 <!-- <h2 class="user-name">WelCome {{studentName}}</h2><br>
 <div class = "container">
@@ -41,27 +43,37 @@
 <!-- <p>{{isFavCity == false}}</p>
 <p>{{isFavCity === false}}</p> -->
 <!-- <p>{{amount === 5600}}</p> if data type is different then it will through an error -->
-{{myName}}
+<!-- {{myName}}
 <p>{{isFavCity}}</p> 
 <br>
 <input type="text" [value]="myName"><br><br>
 <input type="radio" [checked]="gender"><br>
-<input type="text" value = "{{myName}}"><br><br>
+<input type="text" value = "{{myName}}"><br><br> -->
 
 <!-- <input type="text" disabled = "{{isDisabled}}"><br><br> we can not use interpollation majorly with disabled atteribute-->
-<input type="text" [disabled] = "isDisabled"><br>
+<!-- <input type="text" [disabled] = "isDisabled"><br> -->
 
 <!-- 3.EventBinding () (click),(focus) (blur) etc-->
-<br>
+<!-- <br>
 <button (click)="testingEventBinding()">Click...</button>
 {{eventBindingData}}
-<br><br>
+<br><br> -->
 
 <!-- Two way Data binding -->
-<input type="text" [(ngModel)] = "twoWayBindingTest"><br><br>
+<!-- <input type="text" [(ngModel)] = "twoWayBindingTest"><br><br>
 
 {{twoWayBindingTest}}
 
 <button (click)="test()">click to print </button>
+ -->
 
+
+<!-- <app-login></app-login>
+<app-signup></app-signup> -->
+<br>
+
+
+<a routerLink="/login"> Login comoponent </a><br>
+<!-- <a href="/login">login compo...</a> application is getting refresh hence avoid to use -->
+<router-outlet></router-outlet>
 <br><br><br><br><br><br>
