--- a/ANGULAR_PROJECT/src/app/home/home.component.html
+++ b/ANGULAR_PROJECT/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 
-<button routerLink="login">Globel Login</button><br><br>
-<button routerLink = "admin/adminLogin"> admin Login component</button><br><br>
-<button routerLink ="admin/adminSignUp">admin sign up </button><br><br>
-<button routerLink = "owner/ownerLogin">owner Login</button><br><br>
+<button routerLink="/login">Globel Login</button><br><br>
+<button routerLink = "/admin/adminLogin"> admin Login component</button><br><br>
+<button routerLink ="/admin/adminSignUp">admin sign up </button><br><br>
+<button routerLink = "/owner/ownerLogin">owner Login</button><br><br>
 
