--- a/ANGULAR_PROJECT/src/app/login/login.component.html
+++ b/ANGULAR_PROJECT/src/app/login/login.component.html
@@ -1,2 +1,4 @@
 <p>login works!</p>
 <h2>jcsjcbkjb</h2>
+<button routerLink = "/home">Back to Home screen</button>
+<!--<button routerLink = "">landing home screen</button>avoid it , it will not redirect anywhere-->
