--- a/ANGULAR_PROJECT/src/app/login/login.component.html
+++ b/ANGULAR_PROJECT/src/app/login/login.component.html
@@ -1,5 +1,3 @@
-<button routerLink = "/home">Back to Home screen</button>
-<p>login works!</p>
-<h2>jcsjcbkjb</h2>
-
-<!--<button routerLink = "">landing home screen</button>avoid it , it will not redirect anywhere-->
+<div class="container">
+    <h2>Login Screen</h2>
+</div>
