routing css login page

--- a/ANGULAR_PROJECT/src/app/login/login.component.css
+++ b/ANGULAR_PROJECT/src/app/login/login.component.css
@@ -3,3 +3,45 @@
     height: 1000px;
     width: 100%;
 }
+.heading{
+    text-align: center;
+}
+.form-container{
+    text-align: center;
+    margin: auto;
+    border: 1px solid black;
+    height: 400px;
+    width: 300px;
+    padding: 6px 6px;
+    background-color: antiquewhite;
+}
+.label{
+    font-size: 20px;
+    padding: 5px; 
+    top: 4px;
+    position: relative;
+}
+.inp-box{
+    padding: 5px;
+    margin-top: 10px;
+    width: 200px;
+}
+.pass{
+    font-size: 20px;
+    padding: 5px; 
+    position: relative;
+    top: 15px;
+}
+.inp-pass{
+    width: 200px;
+    padding: 5px;
+    margin-top: 21px;
+}
+.submit-btn{
+    background-color: coral;
+    border: none;
+    font-size: 20px;
+    padding: 3px 3px;
+    position: relative;
+    top: 51px;
+}
