--- a/ANGULAR_PROJECT/src/app/login/login.component.html
+++ b/ANGULAR_PROJECT/src/app/login/login.component.html
@@ -1,3 +1,10 @@
 <div class="container">
-    <h2>Login Screen</h2>
+    <h2 class="heading">Login Screen</h2>
+    <form class="form-container"> 
+        <label class="label">User Name</label><br> &nbsp;
+        <input type="text" class="inp-box"><br>
+        <label class="pass"> Password</label><br>
+        <input type="text" class="inp-pass"><br>
+        <button class="submit-btn">Submit</button>
+    </form>
 </div>
