--- a/ANGULAR_PROJECT/src/app/login/login.component.html
+++ b/ANGULAR_PROJECT/src/app/login/login.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <button (click)="back()" class="back-btn">Back</button>
     <h2 class="heading">Login Screen</h2>
     <form class="form-container"> 
         <label class="label">User Name</label><br> &nbsp;
