--- a/ANGULAR_PROJECT/src/app/directives-in-angular/directives-in-angular.component.css
+++ b/ANGULAR_PROJECT/src/app/directives-in-angular/directives-in-angular.component.css
@@ -4,3 +4,18 @@
     width: 100px;
     background-color: chartreuse;
 }
+.itm-container{
+    color: tomato;
+    font-size: 20px;
+    font-family: 'Courier New';
+}
+.table-container{
+    height: 300px;
+    width: 250px;
+    background-color: aquamarine;
+}
+table,th,tr,td{
+    border: 1px solid orangered;
+    border-collapse: collapse;
+    padding: 10px 10px;
+}
