--- a/ANGULAR_PROJECT/src/app/directives-in-angular/directives-in-angular.component.html
+++ b/ANGULAR_PROJECT/src/app/directives-in-angular/directives-in-angular.component.html
@@ -15,7 +15,11 @@ For example, *ngIf directive, *ngSwitch directive, and *ngFor directive. -->
 <!-- uses:
 *ngIf Directive: The ngIf allows us to Add/Remove DOM Element.
 *ngSwitch Directive: The *ngSwitch allows us to Add/Remove DOM Element. It is similar to switch statement of C#.
-*ngFor Directive: The *ngFor directive is used to repeat a portion of HTML template once per each item from an iterable list (Collection). -->
+*ngFor Directive: The *ngFor directive is used to repeat a portion of HTML template once per each item from an iterable list (Collection). 
+
+Attribute Directives: Attribute directives are used to change the look and behavior of the DOM elements. For example: ngClass directive, and ngStyle directive etc.
+ngClass Directive: The ngClass directive is used to add or remove CSS classes to an HTML element.
+ngStyle Directive: The ngStyle directive facilitates you to modify the style of an HTML element using the expression. You can also use ngStyle directive to dynamically change the style of your HTML element-->
 
 <div>
   <!-- In case of true value of propery compiler will ADD that element to the DOM -->
@@ -63,19 +67,29 @@ For example, *ngIf directive, *ngSwitch directive, and *ngFor directive. -->
 
 <table class="table-container">
   <tr>
-    <th>carName</th>
-    <th>carPrice</th>
-    <th>color</th>
+    <th *ngFor="let heading of tableHeadings">{{heading}}</th>
   </tr>
-  <tr *ngFor = "let tableData of carDetails">
+  <tr *ngFor = "let tableData of carDetails" >
     <td>{{tableData.carName}}</td>
     <td>{{tableData.carPrice}}</td>
     <td>{{tableData.color}}</td>
   </tr>
 </table>
 
-<ul *ngFor="let dataItems of data ; let i = index">
-<li >{{dataItems}}</li>
-
+<ul *ngFor = " let data of data2">
+ <li>{{data}}</li>
+</ul>
+<ul *ngFor = " let data of data3">
+  <li>{{data}}</li>
 </ul>
 
+<div class ="container ">
+  I like Pune
+</div>
+
+<div [ngClass]= "color == 'pink' ? 'container1' : 'container'">
+  I like Pune
+</div>
+
+
+<br><br><br>
