--- a/ANGULAR_PROJECT/src/app/login/login.component.html
+++ b/ANGULAR_PROJECT/src/app/login/login.component.html
@@ -1,11 +1,22 @@
 <div class="container">
     <button (click)="back()" class="back-btn">Back</button>
-    <h2 class="heading">Login Screen</h2>
-    <form class="form-container"> 
-        <label class="label">User Name</label><br> &nbsp;
-        <input type="text" class="inp-box"><br>
-        <label class="pass"> Password</label><br>
-        <input type="text" class="inp-pass"><br>
-        <button class="submit-btn">Submit</button>
+    <h2 class="heading">Login Form</h2>
+    <form #loginForm ='ngForm' class="form-container"> 
+
+        <label class = "label"> Full Name </label><br> &nbsp;
+<!-- pattern = "^[a-z]$" -->
+        <input type = "text" class="inp-box" name = "fullName" ngModel 
+         #fullName = 'ngModel' required ><br>
+        <span class="span-err" *ngIf = "fullName.errors?.['required'] && fullName.touched"> Full Name is required</span>
+       
+        <br>
+        <label class = "pass"> Password </label><br>
+
+        <input type = "text" class="inp-pass"><br>
+
+        <button class = "submit-btn"> Submit </button>
     </form>
 </div>
+
+
+
