--- a/ANGULAR_PROJECT/src/app/landing/landing.component.html
+++ b/ANGULAR_PROJECT/src/app/landing/landing.component.html
@@ -2,7 +2,7 @@
 <div class="parent">
     <h2 class="heading">My Application</h2>
     <button (click)="login()" class="btn-login"> Login </button>&nbsp;
-    <button routerLink="/signUp" class="btn-login">Sign Up</button> 
+    <button (click) = "signUp()" class="btn-login"> Sign Up </button>
     <button (click)="studentActivity()" class="btn-login"> Student Activity </button> 
     <button routerLink="/student/studentDemo" class="btn-login"> Student Demo</button> 
     <button (click)="directives()" class="btn-login">Directives</button>
