--- a/ANGULAR_PROJECT/src/app/sign-up/sign-up.component.html
+++ b/ANGULAR_PROJECT/src/app/sign-up/sign-up.component.html
@@ -34,6 +34,11 @@
                              && !signUpForm.get('mobNo')?.errors?.['pattern']">
             Please Enter Maximum 10 Digit Mobile Number
         </span><br><br>
+
+        <label>Gender</label><br>
+        <input type="radio" value="Female" formControlName="gender"> Female <br>
+        <input type="radio" value="Male"  formControlName="gender"> Male <br><br>
+       
         <label>City</label><br>
         <input type="text" formControlName="city"><br><br>
 
