--- a/ANGULAR_PROJECT/src/app/login/login.component.html
+++ b/ANGULAR_PROJECT/src/app/login/login.component.html
@@ -16,14 +16,14 @@
         </span>
         <span *ngIf="fullName.errors?.['minlength'] && !fullName.errors?.['pattern']" class="span-err">
             FullName should be having altleast 5 Alphabets
-        </span><br><br>
+        </span><br>
     
     
         <label class="pass"> Password </label><br>
-        <!-- PooNam$6767 -->
+        <!-- PooNam$6767  keup, keypress,focusIn F-->
         <input type="text" class="inp-pass" ngModel name="pass" #password="ngModel" minlength="8"
-            pattern="[A-Z]{2}[a-zA-Z0-9@#!$%&^*]{9}$"><br>
-    
+            pattern="[A-Z]{2}[a-zA-Z0-9@#!$%&^*]{9}$" ><br>
+        
         <span *ngIf="password.errors?.['minlength']" class="span-err">
             Password should contain atleast 8 charachters
         </span>
@@ -32,7 +32,7 @@
         </span><br>
 
         <label> Confirm Password</label><br>
-        <input type="text" ngModel #confirmPass = 'ngModel' name="confirmPassword">
+        <input  class="inp-pass" type="text" ngModel #confirmPass = 'ngModel' name="confirmPassword">
 
         <br>
         <label > Gender </label><br> 
