--- a/ANGULAR_PROJECT/src/app/student/student-activity/student-activity.component.html
+++ b/ANGULAR_PROJECT/src/app/student/student-activity/student-activity.component.html
@@ -1,18 +1,23 @@
 
 <button (click)="showForm()">Show Sign In Form</button><br><br>
 
-<form [formGroup]="sigInForm" *ngIf="showSignInForm" >
+<form [formGroup]="sigInForm" *ngIf="showSignInForm">
 
-    Password : <input type="text" formControlName="password" 
-                (keyup)="password()"><br>
-                <span *ngIf="!isMatch && sigInForm.get('password')?.dirty" class="err">
-                    password and confirm password sould be same
-                </span ><br>
-    Confirm Password : <input type="text"
-                 formControlName="confirmPassword"
-                 (keyup)="confirmPassword()"><br>
-                 <span *ngIf="!isMatch && sigInForm.get('password')?.dirty"  class="err">
-                    password and confirm password sould be same
-                </span><br>
+    Password : <input type="text" formControlName="password" (keyup)="password()"><br>
+    <span *ngIf="!isMatch && sigInForm.get('password')?.dirty" class="err">
+        password and confirm password sould be same
+    </span><br>
+    Confirm Password : <input type="text" formControlName="confirmPassword" (keyup)="confirmPassword()"><br>
+    <span *ngIf="!isMatch && sigInForm.get('confirmPassword')?.dirty" class="err">
+        password and confirm password sould be same
+    </span><br>
 
+   <label>name</label>
+   <input type="text" formControlName="name"><br>
+<!-- Copy,cOpy,COpy, -->
+   <span *ngIf="sigInForm.get('name')?.errors?.['Err']" class="err">
+    name should not contain copy word 
+   </span>
+
+   <label for=""></label>
 </form>
