--- a/ANGULAR_PROJECT/src/app/student/student-activity/student-activity.component.html
+++ b/ANGULAR_PROJECT/src/app/student/student-activity/student-activity.component.html
@@ -3,10 +3,14 @@
 
 <form [formGroup]="sigInForm" *ngIf="showSignInForm">
 
-    Password : <input type="text" formControlName="password" (keyup)="password()"><br>
+    Password : <input [type]="showPassword ? 'text' : 'password' " formControlName="password" (keyup)="password()">
+     
+    <button (click)="showPass()">show</button><br>
+
     <span *ngIf="!isMatch && sigInForm.get('password')?.dirty" class="err">
         password and confirm password sould be same
     </span><br>
+
     Confirm Password : <input type="text" formControlName="confirmPassword" (keyup)="confirmPassword()"><br>
     <span *ngIf="!isMatch && sigInForm.get('confirmPassword')?.dirty" class="err">
         password and confirm password sould be same
@@ -18,6 +22,6 @@
    <span *ngIf="sigInForm.get('name')?.errors?.['Err']" class="err">
     name should not contain copy word 
    </span>
-
-   <label for=""></label>
+   <span  class="err" *ngIf="sigInForm.get('name')?.errors?.['whiteSpace']">
+    name should not contain white spaces </span>
 </form>
