--- a/ANGULAR_PROJECT/src/app/landing/landing.component.html
+++ b/ANGULAR_PROJECT/src/app/landing/landing.component.html
@@ -3,15 +3,17 @@
     <h2 class="heading" *ngIf="!userName">My Application</h2>
     <h2 class="heading" *ngIf="userName">Welcome {{userName}},</h2>
     <button (click)="login()" class="btn-login"> Login </button>&nbsp;
-    <button (click) = "signUp()" class="btn-login"> Sign Up </button>
-    <button (click)="studentActivity()" class="btn-login"> Student Activity </button> 
-    <button routerLink="/student/studentDemo" class="btn-login"> Student Demo</button> 
+    <button (click)="signUp()" class="btn-login"> Sign Up </button>
+    <button (click)="studentActivity()" class="btn-login"> Student Activity </button>
+    <button routerLink="/student/studentDemo" class="btn-login"> Student Demo</button>
     <button (click)="directives()" class="btn-login">Directives</button>
-<br>
-<div>{{list}}</div>
-<div *ngIf="studentsData">{{studentsData.name}}</div>
-<div *ngIf="studentsData">{{studentsData.city}}</div>
-<button (click)="show()">click</button>
+    <br>
+    <div>{{list}}</div>
+    <div *ngIf="studentsData">{{studentsData.name}}
+        
+    </div>
+    <div *ngIf="studentsData">{{studentsData.city}}</div>
+    <button (click)="show()">click</button>
 </div>
 
 
