--- a/ANGULAR_PROJECT/src/app/student/student-demo/student-demo.component.html
+++ b/ANGULAR_PROJECT/src/app/student/student-demo/student-demo.component.html
@@ -1,2 +1,4 @@
 <p>student-demo works!</p>
 <button (click)="back()"> Back </button>
+<button  (click)="setData()">setData</button>
+<button  (click)="serviceFun()">calingServiceFun</button>
