--- a/ANGULAR_PROJECT/src/app/landing/landing.component.html
+++ b/ANGULAR_PROJECT/src/app/landing/landing.component.html
@@ -7,6 +7,7 @@
     <button (click)="studentActivity()" class="btn-login"> Student Activity </button>
     <button routerLink="/student/studentDemo" class="btn-login"> Student Demo</button>
     <button (click)="directives()" class="btn-login">Directives</button>
+    <button (click)="lifeCycleHooks()" class="btn-login">lifeCycleHooks</button>
     <br>
     <div>{{list}}</div>
     <div *ngIf="studentsData">{{studentsData.name}}
