shared module,parent child

--- a/ANGULAR_PROJECT/src/app/landing/landing.component.html
+++ b/ANGULAR_PROJECT/src/app/landing/landing.component.html
@@ -8,6 +8,7 @@
     <button routerLink="/student/studentDemo" class="btn-login"> Student Demo</button>
     <button (click)="directives()" class="btn-login">Directives</button>
     <button (click)="lifeCycleHooks()" class="btn-login">lifeCycleHooks</button>
+    <button (click)="parent()"  class="btn-login"> Parent </button>
     <br>
     <div>{{list}}</div>
     <div *ngIf="studentsData">{{studentsData.name}}
