--- a/ANGULAR_PROJECT/src/app/child/child.component.html
+++ b/ANGULAR_PROJECT/src/app/child/child.component.html
@@ -4,6 +4,8 @@
 <h3>testing</h3>
 <button (click)="get()">click</button>
 <p>{{data}}</p>
-Name from Parent : {{dataFromParent}}
+Name from Parent : {{dataFromParent}} <br>
+name value from parent :{{parentsDataName}}
 <br>
+<button (click)="sendData()">click</button><br>
 surname: <input type="text" (keyup)="sendData($event)"  >
