--- a/ANGULAR_PROJECT/src/app/student/student-demo/student-demo.component.html
+++ b/ANGULAR_PROJECT/src/app/student/student-demo/student-demo.component.html
@@ -1,4 +1,7 @@
 <p>student-demo works!</p>
 <button (click)="back()"> Back </button>
 <button  (click)="setData()">setData</button>
-<button  (click)="serviceFun()">calingServiceFun</button>
+<button  (click)="serviceFun()">calingServiceFun</button><br>
+
+<!-- events --> 
+<input type="text" (keyup)="keyUpEvent($event)" (blur)="blur()" (focus)="focus()">
