--- a/ANGULAR_PROJECT/src/app/child/child.component.html
+++ b/ANGULAR_PROJECT/src/app/child/child.component.html
@@ -1,5 +1,6 @@
 <br><br>
 --------------------------------------
+<button (click)="back()">Back</button>
 <p>child works!</p>
 <h3>testing</h3>
 <button (click)="get()">click</button>
